# subslice_index.rs

./: Cargo.toml  Readme.md
src/: lib.rs
